--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </audio>
 
 <div class="overlay">
-  <h1>✨ 2026 ✨</h1>
-  <p><br>I'm proud of you 🫡<br>Work hard this year, stay curious & move everyday one step closer to your goals..!<br>
-    📚👮🏻‍♀️👩🏻‍🔬👩🏻‍💻🧑🏻‍🚀🧑🏻‍✈️📚 </p>
+  <h1>✨2026✨</h1>
+  <p><br>I'm proud of you..!<br><br>Work hard this year, stay curious & move everyday one step closer to your goals..!<br><br>
+    📚👮🏻‍♀️👩🏻‍🔬.👩🏻‍💻.🧑🏻‍🚀🧑🏻‍✈️📚 </p>
 </div>
 
 <button class="open-btn" onclick="openNext()">Next 🪄</button>
@@ -25,3 +25,4 @@
 <script src="java.js"></script>
 </body>
 </html>
+
