--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy New Year 🫣</title>
+  <title>Happy New Year _2026_</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,4 +25,5 @@
 <script src="java.js"></script>
 </body>
 </html>
+
 
